fix issue where indicators overlap long headlines

--- a/style.css
+++ b/style.css
@@ -49,10 +49,14 @@
   content:"by ";
 }
 
+.indicators{
+  width:100%;
+  height:1.5em;
+}
 .indicator{
-  position:absolute;
-  top: 10px;
+  position:relative;
   right: 20px;
+  float:right;
 }
 
 /* i'd like to just make this all CSS
